# nrt_btc_aws_firehose

./: .gitignore  README.md  main.py  pyproject.toml
nrt_btc_aws/: ingestor.py  scraper.py  sender.py  utils.py
