[tool.poetry]
name = "nrt-btc-aws"
version = "0.1.0"
description = ""
authors = ["Brisa <brisamnascimento@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.146"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'poetry run python main.py'
pre_test = 'task lint'
test = 'pytest --cov=nrt_btc_aws -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"